@@ -1,3 +1,8 @@
+qtile x.x.x, released xxxx-xx-xx:
+    * features
+        - wlan widget shows when you are disconnected and uses a configurable
+          format
+
 qtile 0.10.4, released 2016-01-19:
     !!! Config breakage !!!
         - positional arguments to Slice layout removed, now `side` and `width`
